Added watershed algorithms and execution file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ if(USE_GDAL AND GDAL_FOUND)
   target_include_directories(watershed_delineation.exe PRIVATE src)
   target_compile_features(watershed_delineation.exe PUBLIC cxx_auto_type cxx_std_17)
 
-#   install(TARGETS main_carve.exe DESTINATION bin)
-#   install(TARGETS watershed_delineation.exe DESTINATION bin)
+  install(TARGETS main_carve.exe DESTINATION bin)
+  install(TARGETS watershed_delineation.exe DESTINATION bin)
 else()
   message(WARNING "GDAL is required to build the DepHier example programs; it is not needed to use the DepHier library in another project.")
 endif()
